# OpenOSV-Deploy

./: .gitignore  Cargo.toml  LICENCE.md  README.md
.github/workflows/: deploy.yaml
HTML/: history.html  index.html  read.html
src/: defines.rs  main.rs  parser.rs  render.rs
static/: style.css
