[package]
name = "OpenOSV"
version = "0.1.3"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tera = "1.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5-alpha.2"
chrono = "0.4.20-rc.1"
sha2 = "0.10.8-pre.4"
once_cell = "1.0.0"
tokio = { version = "1", features = ["full"] }
regex = "1.11.1"

[profile.release]
lto = true  # リンク時最適化
opt-level = "z"  # サイズ最適化